# py_track_visualization

./: .env.sample  .gitignore  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
backend/: Dockerfile
backend/backend/: settings.py  urls.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/tracks/: models.py  serializers.py  urls.py  views.py
backend/tracks/tests/: test_models.py  test_views.py
frontend/: Dockerfile  main.py  utils.py
